--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 
     <link href="https://cdn.quilljs.com/1.2.6/quill.snow.css" rel="stylesheet">
-    <link href="<%= BASE_URL %>style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vue@next"></script>
@@ -61,7 +61,7 @@
                 Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <link rel="stylesheet" href="<%= BASE_URL %>style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- built files will be auto injected -->
 </body>
